--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,22 +1,18 @@
 Nows:
-+make showcase look not bad
--switch to horizontal scroll button style
 
 Plan
-1. Determine what we need to showcase
-+create first showcase page to use as template
-
 2. Ready projects for showcase
-+eDog
 +Pantry Pilot
 +Taskt
 
 3. Fill out showcases
 +swap to currently ready projects
 +fill out showcase for each ready project
++fill out about me
 
 3.5 Finalize designs
 +decide on the looks
++make left and right buttons work
 
 4. Get site working on pi
 +transfer files
@@ -39,10 +35,6 @@ Plan
 8. Add to resume
 
 
-Concept
-The main page shows a list of my projects, include an "about me" /resume item on this list.
-
-Each project has an about project page. This will be effectively a description, preview, 
-how it was made, showcase images/video, and a link to the github, download, and/or functioning site.
-
-The about me page will effectively include my resume, linkedin, and contact info.
+Future things to fix:
++better edog details section, include what its being hosted on
++left and right buttons should work
