--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,31 +1,28 @@
 Nows:
-+apply changes to all other instances
++Register domain
+-add download links
 
-Plan
-3 Finalize designs
-+stylize left and right buttons
-
-4. Get site working on pi
-+transfer files
-+modify nginx
-+organize folders better
-+add file references to nginx for even better organization
-+make deployment script
-
-5. Get site working on web host
-+what host did i decide on?
-+security: auto updates
-
+Todo
 6. Register domain
-+buy it
-+connect to server
-
-7. Get real ssl
-+follow that lil tutorial
++fix missing links (downloads)
 
 8. Add to resume
+
+9. maintenence
++auto-deployment
++auto-updates
++alerts
+
+10. get a job
 
 
 Future things to fix:
 +better edog details section, include what its being hosted on
 +make header and footer use that neat reusey trick
++make arrows look better
+
+Adjacent changes:
++some sort of timer might say 60 seconds instead of a year. see if we need to fix that.
++set the demo site link in git
++edog we should disable admin site in git
++we might want a real backup of our private nginx file and our private settings.py file 
